# KinectFusionAppLib_comments

./: .gitignore  CMakeLists.txt  README.md  runKinectFusionApp.sh
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
KinectFusionApp/: CMakeLists.txt  config.toml
KinectFusionApp/include/: depth_camera.h  util.h
KinectFusionApp/src/: depth_camera.cpp  main.cpp
KinectFusionLib/: CMakeLists.txt  rebuild.sh
KinectFusionLib/include/: data_types.h  kinectfusion.h
KinectFusionLib/src/: kinectfusion.cpp  pose_estimation.cpp  surface_measurement.cpp
KinectFusionLib/src/cuda/: pose_estimation.cu  surface_measurement.cu  surface_prediction.cu  surface_reconstruction.cu
KinectFusionLib/src/cuda/include/: common.h
doc/src/: KinectFusion中Plane-to-point_ICP的计算推导.md
